--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello sifat</h1>
-    <h2>website1</h2>
+    <nav>
+        <div>
+                <h2>Demo Website</h2>
+        </div>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Blogs</a></li>
+            <li><a href="">Videos</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">About</a></li>
+        </ul>
+
+    </nav>
 </body>
 </html>
