--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wesite1</title>
+    <script src="https://kit.fontawesome.com/21a9c5827b.js" crossorigin="anonymous"></script>
     <!-- CSS file here -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,5 +22,13 @@
         </ul>
 
     </nav>
+    <header>
+        <div class="searcharea">
+            <input type="search" name="" placeholder="search">
+            <div>
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
