--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div>
-                <h2>Demo Website</h2>
+                <h2>AI Universe</h2>
         </div>
         <ul>
             <li><a href="">Home</a></li>
@@ -104,14 +104,16 @@
                         <h5>2284 views</h5>
                     </div>
                 </div>
-                <div class="mitem">
-                    <img src="p10.jpg" alt="">
-                    <div>
-                        <h5>29 july 2024</h5>
-                        <h5>1254 views</h5>
-                    </div>
+            </div>
+            <div class="m3">
+                <h3><a href="#">&lt Previous</a></h3>
+                <div class="m31">
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">5</a>
                 </div>
-                </div>
+                <h3><a href="#">Next &gt</a></h3>
             </div>
         </div>
     </main>
