--- a/index.html
+++ b/index.html
@@ -106,16 +106,43 @@
                 </div>
             </div>
             <div class="m3">
-                <h3><a href="#">&lt Previous</a></h3>
+                <h3><a href="#">&lt; Previous</a></h3>
                 <div class="m31">
                     <a href="#">2</a>
                     <a href="#">3</a>
                     <a href="#">4</a>
                     <a href="#">5</a>
                 </div>
-                <h3><a href="#">Next &gt</a></h3>
+                <h3><a href="#">Next &gt;</a></h3>
             </div>
         </div>
     </main>
+    <!-- footer start -->
+    <footer>
+        <div class="f1">
+            <div class="f11">
+                <h3>AI Universe</h3>
+                <p class="p1">let's start your journey with AI Universe . Unlock your potential and reach your dream destination. All contents are live server. You can't copy or share it with others,it is strictly forbidden.</p>
+                <p class="p2">Copyright &copy; 2024.</p>
+            </div>
+            <div class="f12">
+                <h3>Our Links</h3>
+                <p><a href="#">Youtube</a></p>
+                <p><a href="#">Support</a></p>
+                <p><a href="#">Our Company</a></p>
+                <p><a href="#">Contact</a></p>
+            </div>
+            <div class="f13">
+                <div class="ficon">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                </div>
+                <p>Terms & Conditions</p>
+                <h3>Design By Sifat</h3>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
