--- a/index.html
+++ b/index.html
@@ -42,63 +42,63 @@
             </div>
             <div class="m2">
                 <div class="mitem">
-                    <img src="p1.jpg" alt="">
+                    <img src="image/p1.jpg" alt="">
                     <div>
                         <h5>12 july 2024</h5>
                         <h5>1254 views</h5>
                     </div>
                 </div>
                 <div class="mitem">
-                    <img src="p2.jpg" alt="">
+                    <img src="image/p2.jpg" alt="">
                     <div>
                         <h5>15 july 2024</h5>
                         <h5>2254 views</h5>
                     </div>
                 </div>
                 <div class="mitem">
-                    <img src="p3.jpg" alt="">
+                    <img src="image/p3.jpg" alt="">
                     <div>
                         <h5>17 july 2024</h5>
                         <h5>254 views</h5>
                     </div>
                 </div>
                 <div class="mitem">
-                    <img src="p4.jpg" alt="">
+                    <img src="image/p4.jpg" alt="">
                     <div>
                         <h5>18 july 2024</h5>
                         <h5>1884 views</h5>
                     </div>
                 </div>
                 <div class="mitem">
-                    <img src="p5.jpg" alt="">
+                    <img src="image/p5.jpg" alt="">
                     <div>
                         <h5>19 july 2024</h5>
                         <h5>1559 views</h5>
                     </div>
                 </div>
                 <div class="mitem">
-                    <img src="p6.jpg" alt="">
+                    <img src="image/p6.jpg" alt="">
                     <div>
                         <h5>21 july 2024</h5>
                         <h5>1254 views</h5>
                     </div>
                 </div>
                 <div class="mitem">
-                    <img src="p7.jpg" alt="">
+                    <img src="image/p7.jpg" alt="">
                     <div>
                         <h5>23 july 2024</h5>
                         <h5>2954 views</h5>
                     </div>
                 </div>
                 <div class="mitem">
-                    <img src="p8.jpg" alt="">
+                    <img src="image/p8.jpg" alt="">
                     <div>
                         <h5>24 july 2024</h5>
                         <h5>854 views</h5>
                     </div>
                 </div>
                 <div class="mitem">
-                    <img src="p9.jpg" alt="">
+                    <img src="image/p9.jpg" alt="">
                     <div>
                         <h5>26 july 2024</h5>
                         <h5>2284 views</h5>
