--- a/extrapage/blog.html
+++ b/extrapage/blog.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="blog.css">
 </head>
 <body>
+    <nav>
+        <div>
+                <h2>AI Universe</h2>
+        </div>
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="blog.html">Blogs</a></li>
+            <li><a href="video.html">Videos</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+
+    </nav>
     <article>
         <div class="blog-con">
             <h2>AI <span>Blogs</span></h2>
@@ -47,5 +60,31 @@
             </div>
         </div>
     </article>
+    <footer>
+        <div class="f1">
+            <div class="f11">
+                <h3>AI Universe</h3>
+                <p class="p1">let's start your journey with AI Universe . Unlock your potential and reach your dream destination. All contents are live server. You can't copy or share it with others,it is strictly forbidden.</p>
+                <p class="p2">Copyright &copy; 2024.</p>
+            </div>
+            <div class="f12">
+                <h3>Our Links</h3>
+                <p><a href="#">Youtube</a></p>
+                <p><a href="#">Support</a></p>
+                <p><a href="#">Our Company</a></p>
+                <p><a href="#">Contact</a></p>
+            </div>
+            <div class="f13">
+                <div class="ficon">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                </div>
+                <p>Terms & Conditions</p>
+                <h3>Design By Sifat</h3>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
