--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 <h2>AI Universe</h2>
         </div>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Blogs</a></li>
-            <li><a href="">Videos</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="extrapage/blog.html">Blogs</a></li>
+            <li><a href="extrapage/video.html">Videos</a></li>
+            <li><a href="extrapage/contact.html">Contact</a></li>
+            <li><a href="extrapage/about.html">About</a></li>
         </ul>
 
     </nav>
