--- a/extrapage/about.html
+++ b/extrapage/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <script src="https://kit.fontawesome.com/21a9c5827b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
