--- a/extrapage/about.html
+++ b/extrapage/about.html
@@ -13,7 +13,7 @@
                 <h2>AI Universe</h2>
         </div>
         <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="blog.html">Blogs</a></li>
             <li><a href="video.html">Videos</a></li>
             <li><a href="contact.html">Contact</a></li>
